# BioAcoustic

./: .gitignore  README.md
bacl_core/: __init__.py  authority.py  ledger.py  manifest.py
crypto_core/: encryption_logic.py  server.py
dashboard/: app.js  index.html  style.css
docs/: BACL_CORE_EVIDENCE_GATE_V0.md  CURRENT_AUDIT_2026_06_15.md  SECURITY_BOUNDARY.md
edge_node/: Cargo.toml  simulate_node_b.py  test_fusion.ps1
edge_node/src/: main.rs
tests/: test_bacl_core.py
tools/: run_bacl_core_gate.py
