[package]
name = "rust_edge_node"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15.2"
anyhow = "1.0"
